<?xml version="1.0"?>
<package format="3">
  <name>theodolite_node_msgs</name>
  <version>0.0.0</version>
  <description>The theodolite_node_msgs package</description>
  <maintainer email="vaidis.maxime@gmail.com">maxime</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>

  <build_depend>rosidl_default_generators</build_depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

